tests/expectations/compiler/group/mult_by_group_fail.out
Error [ETYC0372120]: Received types `group` and `group` for the operation `*`.
    --> compiler-test:5:12
     |
   5 |     return 0group * a;
     |            ^^^^^^^^^^
     |
     = Valid operands are two integers of the same type, two fields, or a scalar and a group.
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
